# lattice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  models.toml
.github/workflows/: ci.yml
benches/: README.md
crates/lattice-allocator/: Cargo.toml
crates/lattice-allocator/src/: lib.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: main.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs
crates/lattice-kernels/: Cargo.toml
crates/lattice-kernels/src/: lib.rs
crates/lattice-model/: Cargo.toml
crates/lattice-model/src/: gguf.rs  lib.rs  llama.rs
crates/lattice-runtime/: Cargo.toml
crates/lattice-runtime/src/: lib.rs
crates/lattice-runtime/src/llama/: mod.rs  tests.rs
crates/lattice-runtime/src/ops/: activations.rs  attention.rs  matmul.rs  mod.rs  norm.rs  rope.rs  tensor.rs
crates/lattice-tensor/: Cargo.toml
crates/lattice-tensor/src/: lib.rs
docs/: architecture.md  detailed-plan.md  llama-prefill.md  roadmap.md
examples/: README.md  first_token.rs  load_model.rs
scripts/: README.md
src/: lib.rs  models.rs
