[package]
name = "lattice-kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Dynamic kernel launcher abstractions for Lattice."

[lints]
workspace = true

[dependencies]
libloading.workspace = true
lattice-core = { path = "../lattice-core" }
