[package]
name = "lattice-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime orchestration for single-node Lattice inference."

[lints]
workspace = true

[dependencies]
half.workspace = true
lattice-core = { path = "../lattice-core" }
lattice-kernels = { path = "../lattice-kernels" }
lattice-model = { path = "../lattice-model" }
tracing.workspace = true
